// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Components - NotFound Snapshots renders mobile 1`] = `
<div
  className="ui center aligned container"
>
  <h1
    className="ui header"
    style={
      Object {
        "fontSize": "2em",
        "marginTop": "1em",
      }
    }
  >
    Error 404
  </h1>
  <h3
    className="ui header"
  >
    Page not found, go back to 
    <a
      href="/stats"
      onClick={[Function]}
    >
      home
    </a>
     page.
  </h3>
</div>
`;

exports[`App Components - NotFound Snapshots renders no mobile 1`] = `
<div
  className="ui center aligned container"
>
  <h1
    className="ui header"
    style={
      Object {
        "fontSize": "4em",
        "marginTop": "1.5em",
      }
    }
  >
    Error 404
  </h1>
  <h2
    className="ui header"
  >
    Page not found, go back to 
    <a
      href="/stats"
      onClick={[Function]}
    >
      home
    </a>
     page.
  </h2>
</div>
`;
